--- a/01-Schedule.html
+++ b/01-Schedule.html
@@ -5,14 +5,24 @@ permalink: /schedule/
 ---
 
 <div class="section">
-    <h5>Raised</h5> 
-
     <div class="row">
-          <div class="col s12">
-                <a class="waves-effect waves-light btn">button</a>
-                <a class="waves-effect waves-light btn"><i class="material-icons left">cloud</i>button</a>
-                <a class="waves-effect waves-light btn"><i class="material-icons right">cloud</i>button</a>
-          </div>
+    <div class="col s12">
+      <ul class="tabs">
+        <li class="tab col s3"><a class="active"href="#9Oct">9 Oct</a></li>
+        <li class="tab col s3"><a  href="#10Oct">10 Oct</a></li>
+        <li class="tab col s3 "><a href="#11Oct">11 Oct</a></li>
+        <li class="tab col s3"><a href="#12Oct">12 Oct</a></li>
+        <li class="tab col s3"><a href="#13Oct">13 Oct</a></li>
+
+      </ul>
     </div>
+    <div id="9Oct" class="col s12">Content 1</div>
+    <div id="10Oct" class="col s12">Content 2</div>
+    <div id="11Oct" class="col s12">Content 3</div>
+    <div id="12Oct" class="col s12">Content 4</div>
+    <div id="13Oct" class="col s12">Content 4</div>
+
+  </div>
+        
 </div>
-<div class="divider"></div>
+
