Minor layout fixes

--- a/01-Schedule.html
+++ b/01-Schedule.html
@@ -16,11 +16,11 @@ permalink: /schedule/
 
       </ul>
     </div>
-    <div id="9Oct" class="col s12">Content 1</div>
-    <div id="10Oct" class="col s12">Content 2</div>
-    <div id="11Oct" class="col s12">Content 3</div>
-    <div id="12Oct" class="col s12">Content 4</div>
-    <div id="13Oct" class="col s12">Content 4</div>
+    <div id="9Oct" class="col s12 tab-content">Content 1</div>
+    <div id="10Oct" class="col s12 tab-content">Content 2</div>
+    <div id="11Oct" class="col s12 tab-content">Content 3</div>
+    <div id="12Oct" class="col s12 tab-content">Content 4</div>
+    <div id="13Oct" class="col s12 tab-content">Content 5</div>
 
   </div>
         
